Tamanho de tela recomendado e refatorando codigo

--- a/app.html
+++ b/app.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Mata Mosquito</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="css/style.css" />
-		<script src="js/jogo.js"></script>
 	</head>
 	<body onresize="ajustaTamanhoPalcoJogo()">
 
@@ -15,15 +14,13 @@
 				<img id="v3" src="imagens/coracao_cheio.png" />
 			</div>
 
-			<div class="cronometro">Tempo restante: <span id="cronometro"></span></div>
+			<div class="cronometro">
+				Tempo restante: 
+				<span id="cronometro"></span>
+			</div>
 		</div>
 
-		<script>
-			document.getElementById('cronometro').innerHTML = tempo
-
-			var criaMosca = setInterval(function() { 
-				posicaoRandomica()
-			}, criaMosquitoTempo)
-		</script>
+		<script src="./js/resize.js"></script>
+		<script src="js/jogo.js"></script>
 	</body>
 </html>
