--- a/fim_de_jogo.html
+++ b/fim_de_jogo.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Mata Mosquito</title>
 		<meta charset="UTF-8" />
-
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" >
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
@@ -29,5 +27,6 @@
 			</div>
 		</div>
 
+		<script src="./js/resize.js"></script>
 	</body>
 </html>
