--- a/vitoria.html
+++ b/vitoria.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Mata Mosquito</title>
 		<meta charset="UTF-8" />
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" >
 
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
@@ -23,11 +23,12 @@
 			<div class="row">
 				<div class="col">
 					<div class="d-flex justify-content-center">
-						<button type="button" class="btn btn-dark btn-lg" onclick="window.location.href = 'index.html' ">Reiniciar</button>
+						<button type="button" class="btn btn-dark btn-lg"
+							onclick="window.location.href= 'index.html' ">Reiniciar</button>
 					</div>
 				</div>
 			</div>
 		</div>
-
+		<script src="./js/resize.js"></script>
 	</body>
 </html>
